crates/arbor-tui/src/tabs/snapshots/arbor_tui__tabs__agents__tests__snapshot_single_agent_with_metadata.snap
---
source: crates/arbor-tui/src/tabs/agents.rs
assertion_line: 518
expression: output
---
┌Agents────────────────────────────────────────────────────────────────────────┐
│   project                  status                    branch                  │
│●  myapp                    working                   main                    │
└──────────────────────────────────────────────────────────────────────────────┘
┌Metadata──────────────────────────────────────────────────────────────────────┐
│branch           main                                                         │
│project          myapp                                                        │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
