crates/arbor-tui/src/tabs/snapshots/arbor_tui__tabs__agents__tests__snapshot_table_collapsed.snap
---
source: crates/arbor-tui/src/tabs/agents.rs
assertion_line: 718
expression: output
---
Agents [t to expand]────────────────────────────────────────────────────────────
┌Metadata──────────────────────────────────────────────────────────────────────┐
│branch           main                                                         │
│project          myapp                                                        │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
