crates/arbor-tui/src/tabs/snapshots/arbor_tui__tabs__agents__tests__snapshot_with_terminal_pane.snap
---
source: crates/arbor-tui/src/tabs/agents.rs
assertion_line: 547
expression: output
---
┌Agents────────────────────────────────────────────────────────────────────────┐
│   status                                                                     │
│●  working                                                                    │
└──────────────────────────────────────────────────────────────────────────────┘
┌Metadata──────────────────────────────────────────────────────────────────────┐
│This agent is not publishing metadata via hooks.                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌Terminal (i=input)────────────────────────────────────────────────────────────┐
│$ cargo test                                                                  │
│all passed                                                                    │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
